# worldgen

./: .gitignore  README.md  checkpoint_1.md  implementation.md  package-lock.json  pyproject.toml  requirements.txt
data/chunks/: chunk_0_0.npy  chunk_0_0_color.npy
data/presets/: 01.json  02.json  03.json
scripts/: conversion.py  sanity_check.py
server/: rest_api.py
terraingen/: compile.py  gen.py  terraingen.html  terraingen.js
terraingen/include/: Biomes.hpp  Features.hpp  GPUContext.hpp  Heightmap.hpp  IO.hpp  MeshTiler.hpp  Random.hpp  TextureSynth.hpp  Tracing.hpp
terraingen/shaders/: biome_classify.wgsl  caves.wgsl  erosion.wgsl  heightmap.wgsl  heightmap_noise.wgsl  hydraulic_erosion.wgsl  meshtiler.wgsl  rivers.wgsl  texturesynth.wgsl  thermal_erosion.wgsl
terraingen/src/: Biomes.cpp  ChunkGen.cpp  Features.cpp  GPUContext.cpp  Heightmap.cpp  IO.cpp  MeshTiler.cpp  Random.cpp  TextureSynth.cpp  Tracing.cpp  main.cpp
viewer/: compile.py  index.html  raylib_imp.md  raylib_viewer.c  raylib_viewer.html  raylib_viewer.js  raylib_viewer.wasm
viewer/shaders/: voxel.frag  voxel.vert
worldgen/: __init__.py  __main__.py  api.py  biome.py  config_schema.py  generator.py  heightmap.py  noise.py  preset.py  trace.py  utils.py  voxelizer.py
